--- a/registro/style.css
+++ b/registro/style.css
@@ -22,6 +22,15 @@ input[type=text], input[type=password], input[type=email], input[type=date], inp
   box-sizing: border-box;
 }
 
+input #contraseña {
+  width: 90%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
 input[type=submit] {
   background-color: #012FB4;
   color: white;
