--- a/css/miperfil-estilos.css
+++ b/css/miperfil-estilos.css
@@ -4,7 +4,7 @@
     grid-template-rows: 30% 50% 20%;
     background-color: gainsboro;
     position: relative;
-    width: 800px;
+    width: 850px;
     height: 600px;
     top: 50px;
     left: 350px;
@@ -35,4 +35,37 @@ img {
     top: 50px;
 }
 
+#contenedor-editar-informacion{
+    grid-column: 2/3;
+    grid-row: 1/3;
+    background-color: blue;
+}
+
+#info-extra{
+    background-color: aqua;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    font-size: 17px;
+}
+
+#info-extra > p {
+    position: relative;
+    left: 90px;
+}
+
+#editar-informacion-formulario{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    top: 40px;
+}
+
+#editar-informacion-formulario > input , #editar-informacion-formulario > label {
+    position: relative;
+    top: 15px;
+    width: 400px;
+    height: 30px;
+}
 
